--- a/01-formatação/index.html
+++ b/01-formatação/index.html
@@ -222,7 +222,10 @@ public class Classe {
         Link para acessar a <a href="pag002.html" target="_self" rel="next">segunda página do site</a>.
         <!--Importante colocar informações no 'rel' para informar aos buscadores o que cada URL significa-->
         Link para acessar a <a href="noticias/pag_noticias.html" target="_self" rel="next">página de notícias</a>.
-        
+    </p>
+    <h3>Download de Arquivos</h1>
+    <p> 
+
     </p>
 </body> 
 </html>
