Add some changes

--- a/01-formatação/index.html
+++ b/01-formatação/index.html
@@ -227,8 +227,8 @@ public class Classe {
         Link para acessar a <a href="noticias/pag_noticias.html" target="_self" rel="next">página de notícias</a>.
     </p>
     <h3>Download de Arquivos</h1>
-    <p> Baixe aqui o <a href="download/png2pdf.zip">PDF</a> do livro.
-
+    <p> Baixe aqui o <a href="download/png2pdf.zip" download="imagem_pdf">PDF</a> do livro.
+    <!--O atributo download além de especificar que é para download, o valor dentro dele é o nome que o arquivo terá quando for baixado-->
     </p>
 </body> 
 </html>
