Add first CSS code

--- a/02-midias/index.html
+++ b/02-midias/index.html
@@ -41,5 +41,9 @@
     <!--tag 'poster' para o poster do vídeo e 'width' para as dimensões do vídeo-->
 
     <!--Também pode seguir o mesmo modelo de sources em audio e imagens. Esse modelo pode ter várias sources com formatos de vídeos diferentes, caso o navegador não consiga reproduzir um formato, automaticamente tenta reproduzir o formato seguinte da linha abaixo-->
+
+    <h1>Vídeos Incorporados</h1>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/P5HNBX2Z8Sk?start=65" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
