Add some changes

--- a/03-estilos/basic/index1.html
+++ b/03-estilos/basic/index1.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <!-- Colocar os estilos dentro da tag <body style="background-color: black;"> se chama "inline style". Não usual.-->
+    <!-- Colocar os estilos dentro da tag <body style="background-color: black;"> se chama "inline style"-->
     <h1>Capítulo 1</h1>
     <h2>Capítulo 1.1</h2>
     <p>
