--- a/03-estilos/site1/index.html
+++ b/03-estilos/site1/index.html
@@ -8,26 +8,34 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- 'main' é o bloco de texto -->
     <main>
-        <h1>Site Exemplo</h1>
-        <h2>Título 1</h2>
+        <!-- id para dizer que esse h1 é o principal do site -->
+        <h1 id="principal">Site Exemplo</h1>
+
+        <h1>Aprendendo HTML</h1>
+
+        <h2>HTML básico</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ad necessitatibus ratione ex tenetur illum sapiente nemo non quam numquam fugiat quo voluptatibus beatae pariatur optio aut, expedita quas culpa?
         </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, commodi! Reiciendis, error natus voluptatibus obcaecati voluptate, adipisci repudiandae debitis commodi, modi odit ullam eos recusandae nostrum enim accusantium iste mollitia.
-        </p>
-        <h2>Título 2</h2>
+
+        <h2>HTML Avançado</h2>
+        
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quam error delectus voluptatem? Enim vel dolores dolore repellat ea ipsum, eligendi illo eaque laudantium earum libero, obcaecati quae id culpa!
         </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque nesciunt sint est quo ullam hic corrupti obcaecati sunt praesentium. Similique obcaecati, unde quis ullam id maiores qui. Aut, minus.
-        </p>
-        <h2>Título 3</h2>
+
+        <h1>Aprendendo CSS</h1>
+
+        <h2>CSS básico</h2>
+
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus rerum voluptates deleniti nihil architecto impedit rem, voluptas vel, sunt commodi doloremque tempora. Impedit aliquam soluta beatae in ullam cupiditate maxime!
         </p>
+
+        <h2>CSS Avançado</h2>
+
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nostrum ipsum in natus voluptatibus distinctio dolor! Ullam officia esse quos voluptatum et quibusdam, maiores impedit? Veritatis necessitatibus quam itaque aliquam!
         </p>
