Add some changes

--- a/03-estilos/site1/index.html
+++ b/03-estilos/site1/index.html
@@ -15,26 +15,28 @@
 
         <h1>Aprendendo HTML</h1>
 
-        <h2>HTML básico</h2>
+        <!-- uso de classes -->
+        <h2 class="basico">HTML básico</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ad necessitatibus ratione ex tenetur illum sapiente nemo non quam numquam fugiat quo voluptatibus beatae pariatur optio aut, expedita quas culpa?
         </p>
 
-        <h2>HTML Avançado</h2>
+        <h2 class="avancado">HTML Avançado</h2>
         
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quam error delectus voluptatem? Enim vel dolores dolore repellat ea ipsum, eligendi illo eaque laudantium earum libero, obcaecati quae id culpa!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quam error delectus voluptatem? <span class="destaque">Enim vel dolores dolore</span> epellat ea ipsum, eligendi illo eaque laudantium earum libero, obcaecati quae id culpa!
+            <!-- 'span' usado para colocar uma classe dentro de um texto -->
         </p>
 
         <h1>Aprendendo CSS</h1>
 
-        <h2>CSS básico</h2>
+        <h2 class="basico">CSS básico</h2>
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus rerum voluptates deleniti nihil architecto impedit rem, voluptas vel, sunt commodi doloremque tempora. Impedit aliquam soluta beatae in ullam cupiditate maxime!
         </p>
 
-        <h2>CSS Avançado</h2>
+        <h2 class="avancado">CSS Avançado</h2>
 
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nostrum ipsum in natus voluptatibus distinctio dolor! Ullam officia esse quos voluptatum et quibusdam, maiores impedit? Veritatis necessitatibus quam itaque aliquam!
