--- a/04-div/site2_box_inline/index.html
+++ b/04-div/site2_box_inline/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Página 2 do site </title>
+    <link rel="stylesheet" href="style.css">
+    <title> Site 2 </title>
 </head>
 <body>
-    <h1> Segunda página do site </h1>
-    <hr>
+    <h1>Exemplo de caixa box-level</h1>
+
     <p>
-        Link para a <a href="index.html" target="_self" rel="prev">primeira página do site</a>.
+        Exemplo de caixa <span class="inline">inline-level</span>
     </p>
 </body>
 </html>
